<resources>

    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>

    <string name="app_name">WeatherApp</string>
    <string name="city">city</string>
    <string name="location">Location</string>
    <string name="updated_at">Updated at</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="min_temp">Min Temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="search_places">Search Places</string>
</resources>