<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textColor="@color/white"
            android:drawableStart="@drawable/baseline_search_24"
            android:hint="@string/search_places"
            android:textColorHint="@color/white"
            >


        </EditText>

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="24sp">

            </TextView>

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textSize="14sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_Status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/clear_sky"
                android:textSize="18sp"></TextView>

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="24°C"
                android:textSize="90sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"></TextView>

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"></Space>

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max Temp">

                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <!--toplayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <!--sunrise-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#4BFFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="#fff"></ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"></Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textSize="12sp"></TextView>

                    <TextView
                        android:id="@+id/Sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5:30am"
                        android:textSize="14sp"></TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>
                <!--sunset-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#4BFFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="#fff"></ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"></Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textSize="12sp"></TextView>

                    <TextView
                        android:id="@+id/Sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5:12pm"
                        android:textSize="14sp"></TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>
                <!--wind-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#4BFFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="#fff"></ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"></Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textSize="12sp"></TextView>

                    <TextView
                        android:id="@+id/text_Wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.44"
                        android:textSize="14sp"></TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"></Space>
            <!--bottom layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <!--pressure-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#4BFFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="#fff"></ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"></Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textSize="12sp"></TextView>

                    <TextView
                        android:id="@+id/text_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1012"
                        android:textSize="14sp"></TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>
                <!--Humidity-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#4BFFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="#fff"></ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"></Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Humidity"
                        android:textSize="12sp"></TextView>

                    <TextView
                        android:id="@+id/text_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="45"
                        android:textSize="14sp"></TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>
                <!--Info-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#4BFFFFFF"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="#fff"></ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"></Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Created by"
                        android:textSize="12sp"></TextView>

                    <TextView
                        android:id="@+id/text_created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Caie"
                        android:textSize="14sp"></TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

    </ProgressBar>

    <TextView
        android:id="@+id/text_Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Something went wrong"
        android:visibility="gone">

    </TextView>


</RelativeLayout>